tools/fleet/fixtures/packets/invalid/deferred-lane-active.case
source=valid-work.packet
mutation=set Lane-State to DEFERRED_NOT_PROVISIONED while retaining a work packet
expected=invalid
